--- a/portfolio.html
+++ b/portfolio.html
@@ -50,16 +50,36 @@
                 <div class="col-md-12">
                     <h1>Portfolio</h1>
                     </div>
+                </div>         
+                <div class="row">
+                    <div id="galleries" class="col-8">
+                        <div class="images">
+                            <img src="assets/images/abstract.jpg" alt="Hangman" style="width:100%;height:100%;">
+                            <div class="imageLabel">Hangman</div>
+                        </div>
+                        <div class="images">
+                            <img src="assets/images/abstract2.jpg" alt="RPG Game" style="width:100%;height:100%;">
+                            <div class="imageLabel">RPG Game</div>
+                        </div>
+                        <div class="images">
+                            <img src="assets/images/abstract3.jpg" alt="Card Game" style="width:100%;height:100%;">
+                            <div class="imageLabel">Card Game</div>
+                        </div>
+                        <div class="images">
+                            <img src="assets/images/tictactoe.jpg" alt="Tic-tac-toe" style="width:100%;height:100%;">
+                            <div class="imageLabel">Tic-tac-toe</div>
+                        </div>
+                        <div class="images">
+                            <img src="assets/images/sharkgame.jpg" alt="Shark Game" style="width:100%;height:100%;">
+                            <div class="imageLabel">Shark Game</div>
+                        </div>
+                    </div>
                 </div>
-  <div class="wrapper">          
-            <div class="row">
-                <div class="col-md-12">
-                  
-                       
-                </div>
-          </div>
    </div>  
-   </div>   
+   </div>
+   
+   
+   
         <footer class="footer">
           <div class="container-fluid">
           Copyright!
